--- a/view/address_form_simple.xml
+++ b/view/address_form_simple.xml
@@ -2,7 +2,8 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='name']" position="after">
+    <xpath expr="/form/group[@id='checkboxes']" position="after">
+        <newline/>
         <label name="tax_deposit_code"/>
         <field name="tax_deposit_code"/>
     </xpath>
